PROJECT(file_hash)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

if(CMAKE_COMPILER_IS_GNUCC)
    set(USER_C_FLAGS "-g -std=gnu99 -Wunused -Wall")
    set(CMAKE_C_FLAGS "${USER_C_FLAGS} ${CMAKE_C_FLAGS}")
    message(STATUS "optional : ${USER_C_FLAGS}")   
endif(CMAKE_COMPILER_IS_GNUCC)

# 头文件目录
INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/inc
  ${PROJECT_SOURCE_DIR}/inc/hash_layer
  ${PROJECT_SOURCE_DIR}/inc/alarm_tone_list
  ${PROJECT_SOURCE_DIR}/inc/music_playlist
)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

# 子目录
ADD_SUBDIRECTORY(inc)
ADD_SUBDIRECTORY(src)
